--- a/cars.ipynb
+++ b/cars.ipynb
@@ -1,12 +1,34 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": 2,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# Import"
+    "# Part 1 Business Understanding\n",
+    "\n",
+    "By looking at the data initially, we can identify several useful and high quality data, such as mileage, fuel, and owners. To get insight out of the car dataset, we ask following three questions to start data cleaning and exploration\n",
+    "\n",
+    "\n",
+    "1. Cars make and model can last longest.\n",
+    "2. Cars make and model have lowest fuel costs.\n",
+    "3. cars gets sold most often/owner hates the most."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Part 2 Import Data\n",
+    "In this session, we loaded car detail dataset locally and import packages."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Library used\n",
+    "pandas\n",
+    "numpy"
    ]
   },
   {
@@ -20,12 +42,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# Load Dataset"
+    "## Load Dataset"
    ]
   },
   {
@@ -188,18 +208,19 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# Checking for Null Values"
+    "## Checking for Null Values\n",
+    "initial review and check on data quality"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 7,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -233,24 +254,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# Three questions:\n",
-    "#Cars make and model can last longest.\n",
-    "#Cars make and model have lowest fuel costs.\n",
-    "#cars gets sold most often/owner hates the most."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Data cleaning"
+    "# Part 3 Data cleaning\n",
+    "In this part, we conducted data cleaning, which mainly uses dropna() function."
    ]
   },
   {
@@ -288,12 +296,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "#Cars make and model can drive longest milages."
+    "# Part 4 Question 1 Cars make and model can drive longest milages\n",
+    "To answer the first question, we look at the mileage of popular brands in the market. \n",
+    "Start with data aggregation"
    ]
   },
   {
@@ -5445,7 +5453,14 @@
     "\n",
     "fig = plt.figure(figsize =(10, 7))\n",
     "plt.bar(make[0:10], km_driven[0:10])\n",
+    "'''\n",
+    "this function provides visualization of which car brand last longest with its average mileage in a bar plot\n",
     "\n",
+    "input: make, km_driven\n",
+    "\n",
+    "output: car brand vs average mileage\n",
+    "\n",
+    "'''\n",
     "plt.show()"
    ]
   },
@@ -6082,27 +6097,38 @@
     "\n",
     "fig = plt.figure(figsize =(10, 7))\n",
     "plt.bar(make[0:3], km_driven[0:3])\n",
+    "'''\n",
+    "this function provides visualization of top 3 car model last longest with its average mileage in a bar plot\n",
     "\n",
+    "input: model, km_driven\n",
+    "\n",
+    "output: model vs average mileage, top 3\n",
+    "\n",
+    "'''\n",
     "plt.show()"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 86,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# after research, major car brands can last longest on the market are Toyota, Mahindra and Tata;\n",
-    "# the best models to get are Toyota Innova 2.5 EV Diesel PS 7 Seater BSIII, Toyota Qualis FS B3 and Mahindra Bolero DI Non AC BSIII\t"
+    "## Conclusion for Question 1\n",
+    "after research, major car brands can last longest on the market are Toyota, Mahindra and Tata;\n",
+    "\n",
+    "the best models to get are Toyota Innova 2.5 EV Diesel PS 7 Seater BSIII, Toyota Qualis FS B3 and Mahindra Bolero DI Non AC BSIII\t\n",
+    "\n",
+    "Toyota earns its relibility reputation as always, on average, it can last over 100,000 kms. Followed by Mahindra and Tata. Those two brands seem to be local(India) homemade, which could be better supplied with spare parts and technician for them to last longer.\n",
+    "\n",
+    "If you’d like to know which model to purchase, the data gaves the answer: Toyota Innova 2.5 EV Diesel PS 7 Seater BSIII, Toyota Qualis FS B3 and Mahindra Bolero DI Non AC BSIII. They all last over 300,000 kms and the Toyota Innova 2.5 EV Diesel PS 7 Seater BSIII lasted over 500,000kms thanks to its reliable and simple diesel powertrain."
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "#Cars make and model have lowest fuel costs.\n"
+    "# Part 5 Question 2 Cars make and model have lowest fuel costs.\n",
+    "\n",
+    "To look at which car will help you save more money on fuel, especially in this economy. We look at all three types of fuels: gasoline, diesel and CNG and convert the fuel cost to Kilometers per dollar (kmpdollar)."
    ]
   },
   {
@@ -9048,13 +9074,46 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Conclusion for question 2\n",
+    "\n",
+    "From the ‘kmpdollar’ indicator, it shows that CNG powered vehicles from Maruti takes the top of the board. They can run around 50 kms with $1 of fuel! But if CNG is not the fuel that accessible to your daily route, The next best ones for your are Volvo XC90 T8 Excellence BSIV for luxury brands and Tata Nano Cx BSIV for economy brands."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Part 6 Question 3 cars gets sold most often/owner hates the most.\n",
+    "\n",
+    "To buy a car that last longer, you will also need to love them. We also look at on average how many owners does each car brand have. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Conclusion for question 3\n",
+    "On average, Chevrolet has more than 1.6 ownerships, much higher than the second place Volkswagen. The Toyota ranked #4 in the list, which make sense as well due to its long durability, which means it might outlived its owner.\n",
+    "\n",
+    "this part I lost code due to I fail to save the last version in submission 1. The results are saved in blog"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "#cars gets sold most often/owner hates the most."
-   ]
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
