--- a/Project1/cars.ipynb
+++ b/Project1/cars.ipynb
@@ -5465,7 +5465,12 @@
    "outputs": [],
    "source": [
     "def barplot(column_name):\n",
+    "    '''\n",
+    "    returns a bar chart\n",
+    "    input: column_name: the column you'd like to visualize against car makes\n",
+    "    output: bar chart visualize values against car makers\n",
     "    \n",
+    "    '''\n",
     "    vals = df2['make'].head(12)\n",
     "    (vals/df.shape[0]).plot(kind='bar')\n",
     "    plt.title(column_name)\n",
